2020-07-24  Charlie Zender  <zender@uci.edu>

	* Change diagnostic rec_rmn_prv_ilv to 0 if no FLG_ILV

2020-07-23  Charlie Zender  <zender@uci.edu>

	* Create simple ILV regression tests that all pass so far

	* Exit with error when interleaved sub-cycle crosses file boundary

	* Turn-off "Intra-file non-monotonicity" WARNINGs for interleaved files

	* Change nco_gsl.[c/h] to nco_gsl.[cc/hh] so broken MSVC compiles it as C++ and eliminates "restrict" keyword

	* Fix ILV record counters when multiple SSCs within one file

2020-07-22  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.4-alpha07 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-alpha07: Interleave';git push
 	git tag -a 4.9.4-alpha07 -m 'ncra/ncrcat: ILV API;ncks baa 5,6 = ppc bit round, half-shave;';git push --tags

	* Update NSD=3 regression test to select Bit Grooming

	* New interleave API appears to work for ncrcat/ncra single and multiple files!

2020-07-21  Charlie Zender  <zender@sastrugi.local>

	* Eliminate deprecated or un-used MRO specification via 'm' or 'M' as sixth hyperslab argument

	* Change interleave API from --ilv -d dmn,srt,cnt,ilv=srd=ssc to -d dmn,srt,cnt,srd,ssc,ilv

2020-07-19  Charlie Zender  <zender@uci.edu>

	* Re-considering ilv implementation and final diurnal strategy

	* ncra interleave (flg_ilv) always implies multi-record-output (flg_mro)

2020-07-17  Charlie Zender  <zender@uci.edu>

	* Adjust diagnostic count (cnt) for interleaving (do not divide span by stride)

	* ncrcat interleaving invoked as either stride-only and stride-ssc work identically for multiple files

	* Merge Kouznetsov's implementation of Milan Klower's integer-math-only version of nearest neighbor rounding into the new default bit-adjustment-algorithm (BAA) #5

2020-07-16  Charlie Zender  <zender@uci.edu>

	* ncra/ncrcat: Implement stride resets over interleaved dimension, works for multiple files!

2020-07-15  Charlie Zender  <zender@uci.edu>
